Added test cases for questionnaires model.
